# MyFirstApp

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  IMU_process.h  IMU_trans.cpp  filtfilt.h  my_filtfilt.cpp  native-lib.cpp
app/src/main/java/com/example/myfirstapp/: MainActivity.kt
app/src/main/res/layout/: mainactivity.xml
gradle/wrapper/: gradle-wrapper.properties
